[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
description = "Implementation of the 'Vault' node for the SAFE Network."
documentation = "https://docs.rs/safe_vault"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_vault"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_vault"
version = "0.18.0"

[[bin]]
doc = false
name = "safe_vault"

[[test]]
name = "tests"
[build-dependencies.hyper]
optional = true
version = "~0.11.25"

[dependencies]
accumulator = "~0.7.0"
clap = "~2.29.4"
config_file_handler = "~0.10.0"
fake_clock = "~0.2.0"
hex = "~0.3.1"
itertools = "~0.7.8"
log = "~0.4.1"
lru_time_cache = "~0.8.0"
maidsafe_utilities = "~0.15.0"
quick-error = "~1.2.1"
rand = "~0.4.2"
serde = "~1.0.37"
serde_derive = "~1.0.37"
serde_json = "~1.0.13"
tempdir = "~0.3.7"
tiny-keccak = "~1.4.2"
unwrap = "1.1.0"

[dependencies.routing]
git = "https://github.com/povilasb/routing"
rev = "2ce0e580d"

[dependencies.safe_crypto]
git = "https://github.com/maidsafe/safe_crypto"
rev = "f214410"

[features]
generate-diagrams = ["hyper"]
use-mock-crust = [
    "routing/use-mock-crust",
    "lru_time_cache/fake_clock",
]
use-mock-crypto = ["routing/use-mock-crypto"]
use-mock-routing = ["lru_time_cache/fake_clock"]
